# arka-ctf

./: Anchor.toml  Cargo.toml
.github/workflows/: build.yaml
app/solana-ctf-client/: Cargo.toml
app/solana-ctf-client/src/: main.rs
docs/: architecture.md
programs/solana-ctf/: Cargo.toml
programs/solana-ctf/src/: lib.rs
programs/solana-ctf/src/ctf/: mod.rs
programs/solana-ctf/tests/: mint.rs
solana-ctf-client/src/: main.rs
