[package]
name = "solana-ctf-client"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-client = { version = "0.30.1" }
anchor-lang = "0.30.1"
shellexpand = "2.1.0"
solana-ctf = { path = "../../programs/solana-ctf/", features = [
    "no-entrypoint",
] }
anchor-spl = { version = "0.30.1" }
spl-associated-token-account = { version = "^2.0.0" }
spl-token = "3.4.0"
solana-client = "1.10"
